--- a/DS_Linked_List.ipynb
+++ b/DS_Linked_List.ipynb
@@ -6,7 +6,7 @@
       "name": "DS-Linked List",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAYpP/M5ZV/RzDcufnsC2t"
+      "authorship_tag": "ABX9TyMH3A6khG+os1CsPv/NKQGU"
     },
     "kernelspec": {
       "name": "python3",
@@ -48,7 +48,7 @@
         "        self.next = None\n",
         "        \n",
         "\n",
-        "class \t\n",
+        "class LinkedList:\n",
         "    def __init__(self, value):\n",
         "        new_node = Node(value)\n",
         "        self.head = new_node\n",
@@ -97,7 +97,9 @@
         "# (1) Item -  Returns 1 Node\n",
         "print(my_linked_list.pop())\n",
         "# (0) Items - Returns None\n",
-        "print(my_linked_list.pop())\n"
+        "print(my_linked_list.pop())\n",
+        "\n",
+        "\n"
       ]
     },
     {
